@@ -6,6 +6,7 @@
 * Added Hold option to the dspu::Compressor module.
 * Added Hold option to the dspu::Expander module.
 * Added Hold option to the dspu::Gate module.
+* Added Hold option to the dspu::DynamicProcessor module.
 * Fixed RLC implementation of allpass filters.
 * Added support of LR2 (12 dB/oct) filters by the Crossover.
 * Updated build scripts.
